GNOME Bugzilla – Bug 764281
Memory leak when parsing OSM objects
Last modified: 2016-03-29 19:38:25 UTC
The libxml2 XML document object is never freed when parsing an object to edit.
Created attachment 324871 [details] [review] osmEdit: Fix memory leak when parsing XML document
Review of attachment 324871 [details] [review]: Ship it. Thanks!
Attachment 324871 [details] pushed as f40f853 - osmEdit: Fix memory leak when parsing XML document