osmEdit: Fix memory leak when parsing XML document

https://bugzilla.gnome.org/show_bug.cgi?id=764281